# hack-the-pedestrian

./: .gitmodules  Makefile  README.md  pyproject.toml
data/: airodump-ng-01.csv
src/hack_the_pedestrian/: mac_filter.py  mac_model.py  mac_sniffer.py  main.py
